fixed about page text align

--- a/src/App.css
+++ b/src/App.css
@@ -1040,6 +1040,7 @@ margin-bottom: 40px;}
   .about-text-container h2{
     text-align:center;
   }
+ 
   .general-button {
     display: flex;
     justify-content: center;}
@@ -1180,9 +1181,10 @@ width: 100%;
   translate: 0% -80%;
 }
 .about-text-container{
-  text-align: center;
+  text-align: right;
 }
 @media (max-width: 900px) {
+  
   .about-image-container{
     margin-bottom: 15px;
   }
@@ -1206,6 +1208,8 @@ width: 100%;
   .about-image-container,
   .about-text-container {
     width: 100%;
+    text-align: center;
+
   }
   .about-text-container p {
     width: 100%;
